--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                                             <h3 class="modal-title">Health</h3>
                                         </div>
                                       <div class="modal-content">
-                                        <p class="modal-body">SSmileyGo has coached Pan Peru and other NGOs in order to make a sustainable difference in the rural health of Peru, Chile, Argentina and Mexico. We have helped over 12500 citizens in the past eleven years with the help not only from Pan Peru staff, but also from the children of Pampas Grande. Here, we are not only giving the Pampas citizens medical attention, but we are teaching them how to take of themselves through clinics, workshops and CPR conventions. The people receiving our help, are learning from us and hence depending more on themselves in the areas of pediatrics, neurology and dermatology.</p>
+                                        <p class="modal-body">SmileyGo has coached Pan Peru and other NGOs in order to make a sustainable difference in the rural health of Peru, Chile, Argentina and Mexico. We have helped over 12500 citizens in the past eleven years with the help not only from Pan Peru staff, but also from the children of Pampas Grande. Here, we are not only giving the Pampas citizens medical attention, but we are teaching them how to take of themselves through clinics, workshops and CPR conventions. The people receiving our help, are learning from us and hence depending more on themselves in the areas of pediatrics, neurology and dermatology.</p>
                                       </div>
                                       <div class="modal-footer">
                                         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
