modal background & service icon changed

--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
                         <div class="col-md-3 col-sm-6">
                             <div class="service-item">
                                 <span class="fa-stack fa-4x">
-                                <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-cloud fa-stack-1x text-primary"></i>
+                                    <i class="fa fa-circle fa-stack-2x"></i>
+                                    <i class="fa fa-book fa-stack-1x text-primary"></i>
                                 </span>
                                 <h4>
                                     <strong>Education</strong>
@@ -136,7 +136,7 @@
                             <div class="service-item">
                                 <span class="fa-stack fa-4x">
                                 <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-compass fa-stack-1x text-primary"></i>
+                                <i class="fa fa-tree fa-stack-1x text-primary"></i>
                             </span>
                                 <h4>
                                     <strong>Environment</strong>
@@ -167,7 +167,7 @@
                             <div class="service-item">
                                 <span class="fa-stack fa-4x">
                                 <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-flask fa-stack-1x text-primary"></i>
+                                <i class="fa fa-medkit fa-stack-1x text-primary"></i>
                             </span>
                                 <h4>
                                     <strong>Health</strong>
@@ -198,7 +198,7 @@
                             <div class="service-item">
                                 <span class="fa-stack fa-4x">
                                 <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-shield fa-stack-1x text-primary"></i>
+                                <i class="fa fa-home fa-stack-1x text-primary"></i>
                             </span>
                                 <h4>
                                     <strong>Family Formation</strong>
